@@ -1,3 +1,7 @@
+2005-10-13  noel  <vnoel@cox.net>
+
+	* log_repaint.c (iterate_thru_children): Removed. Whee !
+
 2005-10-13  Vincent Noel  <vnoel@cox.net>
 
 	* logview.c: (save_session), (main), (logview_count_logs): *
